--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //Dependencies for Android unit test (Mockito)
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    //TODO: fix "failed to resolve below dependencies...."
+    //androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
+    //androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     testCompile 'junit:junit:4.12'
