--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //Dependencies for Android unit test (Mockito)
-    androidTestCompile 'org.mockito:mockito-core:1.10.19'
     //TODO: fix "failed to resolve below dependencies...."
     //androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
     //androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+    compile 'org.jetbrains:annotations-java5:15.0'
+    compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
-    compile 'org.jetbrains:annotations-java5:15.0'
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
 }
